{
  "version": 4,
  "terraform_version": "1.16.1",
  "serial": 166,
  "lineage": "97404817-25c1-ef9d-7cc4-179e0778059e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02ab2672d67c9d107",
            "arn": "arn:aws:ec2:us-east-1:797886334120:elastic-ip/eipalloc-02ab2672d67c9d107",
            "association_id": "eipassoc-0e1893fb9fd3d0c5d",
            "domain": "vpc",
            "id": "eipalloc-02ab2672d67c9d107",
            "network_border_group": "us-east-1",
            "network_interface": "eni-04877f60f90569169",
            "private_dns": "ip-10-0-0-121.ec2.internal",
            "private_ip": "10.0.0.121",
            "public_dns": "ec2-44-207-218-226.compute-1.amazonaws.com",
            "public_ip": "44.207.218.226",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-nat-eip",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-nat-eip",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "797886334120",
            "id": "eipalloc-02ab2672d67c9d107",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797886334120:internet-gateway/igw-0772b3b06b4af1241",
            "id": "igw-0772b3b06b4af1241",
            "owner_id": "797886334120",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-igw",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-igw",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06904f2cb7edccc35"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "797886334120",
            "id": "igw-0772b3b06b4af1241",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:797886334120:loadbalancer/app/alb/22ef66b985e5d8f4",
            "arn_suffix": "app/alb/22ef66b985e5d8f4",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-1586929396.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:797886334120:loadbalancer/app/alb/22ef66b985e5d8f4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-08c874412913471d9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0767b030b48f5d1b8"
              },
              {
                "subnet_id": "subnet-0eb92786c16c5ccf2"
              },
              {
                "subnet_id": "subnet-0f6c047655241b374"
              }
            ],
            "subnets": [
              "subnet-0767b030b48f5d1b8",
              "subnet-0eb92786c16c5ccf2",
              "subnet-0f6c047655241b374"
            ],
            "tags": {
              "Name": "dev-alb",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-alb",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06904f2cb7edccc35",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:797886334120:loadbalancer/app/alb/22ef66b985e5d8f4"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:797886334120:listener/app/alb/22ef66b985e5d8f4/a18836da3626aff4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:797886334120:targetgroup/ui-tg/8562a84fbd6d5eca",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:797886334120:listener/app/alb/22ef66b985e5d8f4/a18836da3626aff4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:797886334120:loadbalancer/app/alb/22ef66b985e5d8f4",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:797886334120:listener/app/alb/22ef66b985e5d8f4/a18836da3626aff4"
          },
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.ui",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:797886334120:targetgroup/ui-tg/8562a84fbd6d5eca",
            "arn_suffix": "targetgroup/ui-tg/8562a84fbd6d5eca",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:797886334120:targetgroup/ui-tg/8562a84fbd6d5eca",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:797886334120:loadbalancer/app/alb/22ef66b985e5d8f4"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ui-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-06904f2cb7edccc35"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:797886334120:targetgroup/ui-tg/8562a84fbd6d5eca"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02ab2672d67c9d107",
            "association_id": "eipassoc-0e1893fb9fd3d0c5d",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0655576a9d7b4a466",
            "network_interface_id": "eni-04877f60f90569169",
            "private_ip": "10.0.0.121",
            "public_ip": "44.207.218.226",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0eb92786c16c5ccf2",
            "tags": {
              "Name": "dev-nat",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-nat",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06904f2cb7edccc35"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "797886334120",
            "id": "nat-0655576a9d7b4a466",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797886334120:route-table/rtb-03df1ffc7675975e1",
            "id": "rtb-03df1ffc7675975e1",
            "owner_id": "797886334120",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0655576a9d7b4a466",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-private-rt",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-private-rt",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-06904f2cb7edccc35"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "797886334120",
            "id": "rtb-03df1ffc7675975e1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797886334120:route-table/rtb-04607bdcbb483af8e",
            "id": "rtb-04607bdcbb483af8e",
            "owner_id": "797886334120",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0772b3b06b4af1241",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public-rt",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-public-rt",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-06904f2cb7edccc35"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "797886334120",
            "id": "rtb-04607bdcbb483af8e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7d94917daf21961",
            "region": "us-east-1",
            "route_table_id": "rtb-03df1ffc7675975e1",
            "subnet_id": "subnet-064c8efb88438347c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "797886334120",
            "id": "rtbassoc-0b7d94917daf21961",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087c972b9e3d7cfbf",
            "region": "us-east-1",
            "route_table_id": "rtb-03df1ffc7675975e1",
            "subnet_id": "subnet-008b284f476da76c2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "797886334120",
            "id": "rtbassoc-087c972b9e3d7cfbf",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028f1b4115afa9c87",
            "region": "us-east-1",
            "route_table_id": "rtb-03df1ffc7675975e1",
            "subnet_id": "subnet-0156d89229b692fb4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "797886334120",
            "id": "rtbassoc-028f1b4115afa9c87",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ac3f683c376d475",
            "region": "us-east-1",
            "route_table_id": "rtb-04607bdcbb483af8e",
            "subnet_id": "subnet-0eb92786c16c5ccf2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "797886334120",
            "id": "rtbassoc-04ac3f683c376d475",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0744af78b6fbbf2d8",
            "region": "us-east-1",
            "route_table_id": "rtb-04607bdcbb483af8e",
            "subnet_id": "subnet-0767b030b48f5d1b8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "797886334120",
            "id": "rtbassoc-0744af78b6fbbf2d8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04418c768493d5b2b",
            "region": "us-east-1",
            "route_table_id": "rtb-04607bdcbb483af8e",
            "subnet_id": "subnet-0f6c047655241b374"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "797886334120",
            "id": "rtbassoc-04418c768493d5b2b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797886334120:security-group/sg-08c874412913471d9",
            "description": "Allow trafic for alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08c874412913471d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "797886334120",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-alb-sg",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-alb-sg",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-06904f2cb7edccc35"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "797886334120",
            "id": "sg-08c874412913471d9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797886334120:security-group/sg-0195911838d895823",
            "description": "Allow NFS traffic from ECS services",
            "egress": [],
            "id": "sg-0195911838d895823",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-042954994a942110e"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs-sg",
            "name_prefix": "",
            "owner_id": "797886334120",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-efs-sg",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-efs-sg",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-06904f2cb7edccc35"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "797886334120",
            "id": "sg-0195911838d895823",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797886334120:security-group/sg-042954994a942110e",
            "description": "Security group for ECS services",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-042954994a942110e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08c874412913471d9"
                ],
                "self": true,
                "to_port": 8080
              }
            ],
            "name": "service-sg",
            "name_prefix": "",
            "owner_id": "797886334120",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-service-sg",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-service-sg",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-06904f2cb7edccc35"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "797886334120",
            "id": "sg-042954994a942110e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797886334120:subnet/subnet-064c8efb88438347c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-064c8efb88438347c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "797886334120",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-private-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06904f2cb7edccc35"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "797886334120",
            "id": "subnet-064c8efb88438347c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797886334120:subnet/subnet-008b284f476da76c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008b284f476da76c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "797886334120",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-private-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06904f2cb7edccc35"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "797886334120",
            "id": "subnet-008b284f476da76c2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797886334120:subnet/subnet-0156d89229b692fb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0156d89229b692fb4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "797886334120",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-private-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-private-us-east-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06904f2cb7edccc35"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "797886334120",
            "id": "subnet-0156d89229b692fb4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797886334120:subnet/subnet-0eb92786c16c5ccf2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb92786c16c5ccf2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "797886334120",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-public-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-public-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06904f2cb7edccc35"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "797886334120",
            "id": "subnet-0eb92786c16c5ccf2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797886334120:subnet/subnet-0767b030b48f5d1b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0767b030b48f5d1b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "797886334120",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-public-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-public-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06904f2cb7edccc35"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "797886334120",
            "id": "subnet-0767b030b48f5d1b8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797886334120:subnet/subnet-0f6c047655241b374",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6c047655241b374",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "797886334120",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-public-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-public-us-east-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06904f2cb7edccc35"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "797886334120",
            "id": "subnet-0f6c047655241b374",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797886334120:vpc/vpc-06904f2cb7edccc35",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0403ede7658a0f6c2",
            "default_route_table_id": "rtb-0418f3786df08ba38",
            "default_security_group_id": "sg-0168c057e6c9ad431",
            "dhcp_options_id": "dopt-06ef12beefe60d3b6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06904f2cb7edccc35",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0418f3786df08ba38",
            "owner_id": "797886334120",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-vpc",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "797886334120",
            "id": "vpc-06904f2cb7edccc35",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "alb_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797886334120:security-group-rule/sgr-0c63e75ebbb0e51b1",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0c63e75ebbb0e51b1",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-08c874412913471d9",
            "security_group_rule_id": "sgr-0c63e75ebbb0e51b1",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "797886334120",
            "id": "sgr-0c63e75ebbb0e51b1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "service_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797886334120:security-group-rule/sgr-0e6623c5cec5c5d30",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0e6623c5cec5c5d30",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-042954994a942110e",
            "security_group_rule_id": "sgr-0e6623c5cec5c5d30",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "797886334120",
            "id": "sgr-0e6623c5cec5c5d30",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.service",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797886334120:security-group-rule/sgr-0d1ac45cbcc4c1089",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0d1ac45cbcc4c1089",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-08c874412913471d9",
            "security_group_rule_id": "sgr-0d1ac45cbcc4c1089",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "797886334120",
            "id": "sgr-0d1ac45cbcc4c1089",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "efs_from_services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797886334120:security-group-rule/sgr-0b4b2e35154514968",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 2049,
            "id": "sgr-0b4b2e35154514968",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-042954994a942110e",
            "region": "us-east-1",
            "security_group_id": "sg-0195911838d895823",
            "security_group_rule_id": "sgr-0b4b2e35154514968",
            "tags": null,
            "tags_all": {},
            "to_port": 2049
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "797886334120",
            "id": "sgr-0b4b2e35154514968",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.efs_sg",
            "aws_security_group.service",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "services_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797886334120:security-group-rule/sgr-04ec3cb75fe96742a",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-04ec3cb75fe96742a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-08c874412913471d9",
            "region": "us-east-1",
            "security_group_id": "sg-042954994a942110e",
            "security_group_rule_id": "sgr-04ec3cb75fe96742a",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "797886334120",
            "id": "sgr-04ec3cb75fe96742a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.service",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "services_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797886334120:security-group-rule/sgr-0729545c6191d6785",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-0729545c6191d6785",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-042954994a942110e",
            "region": "us-east-1",
            "security_group_id": "sg-042954994a942110e",
            "security_group_rule_id": "sgr-0729545c6191d6785",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "797886334120",
            "id": "sgr-0729545c6191d6785",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.service",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}